# muse_framework

buildscripts/: muse_deps.ref
buildscripts/ci/crashdumps/: ci_generate_and_upload.cmake  ci_generate_dumpsyms.cmake  ci_sentry_dumpsyms_upload.cmake
buildscripts/ci/crashdumps/posix/: generate_breakpad_symbols.py
buildscripts/ci/linux/: setup.sh
buildscripts/ci/linux/tools/: make_appimage.sh
buildscripts/ci/macos/: build.sh
buildscripts/cmake/: ExtDepsManifest.cmake  SetupDependencies.cmake
framework/: CMakeLists.txt
framework/actions/: actionsmodule.cpp
framework/actions/internal/: actionsdispatcher.cpp  actionsdispatcher.h
framework/audio/common/: audiotaskscheduler.h  audiotypes.h  audioutils.h
framework/audio/common/rpc/: rpcpacker.h
framework/audio/driver/: CMakeLists.txt
framework/audio/engine/: CMakeLists.txt
framework/audio/engine/internal/: audioengineconfiguration.cpp  enginerpccontroller.cpp
framework/audio/main/: iaudioconfiguration.h
framework/audio/main/internal/: audioconfiguration.cpp  (+5 more)
framework/audio/tests/: CMakeLists.txt  audioresourcetypes_tests.cpp  rpcpacker_tests.cpp
framework/audioplugins/: CMakeLists.txt  audiopluginsmodule.cpp  audiopluginstypes.h  iaudiopluginmetareader.h  iaudiopluginsconfiguration.h  iaudiopluginsscanner.h  iknownaudiopluginsmigrationregister.h  iknownaudiopluginsregister.h  iregisteraudiopluginsscenario.h
framework/audioplugins/internal/: audiopluginsconfiguration.cpp  audiopluginsconfiguration.h  knownaudiopluginsmigrationregister.cpp  knownaudiopluginsmigrationregister.h  knownaudiopluginsregister.cpp  knownaudiopluginsregister.h  registeraudiopluginsscenario.cpp  registeraudiopluginsscenario.h
framework/audioplugins/tests/: CMakeLists.txt  knownaudiopluginsmigrationregistertest.cpp  knownaudiopluginsregistertest.cpp  registeraudiopluginsscenariotest.cpp
framework/audioplugins/tests/mocks/: audiopluginmetareadermock.h  audiopluginsconfigurationmock.h  audiopluginsscannermock.h  knownaudiopluginsmigrationregistermock.h  knownaudiopluginsregistermock.h
framework/cmake/: MuseDeclareOptions.cmake  muse_framework_config.h.in
framework/diagnostics/: CMakeLists.txt
framework/diagnostics/internal/crashhandler/: crashhandler.cpp
framework/diagnostics/qml/Muse/Diagnostics/: DiagnosticActionsPanel.qml
framework/dockwindow_v2/: CMakeLists.txt
framework/dockwindow_v2/internal/: dockbase.cpp  dockbase.h
framework/dockwindow_v2/tests/: CMakeLists.txt  topleveltoolbarslayout_tests.cpp
framework/draw/: CMakeLists.txt
framework/draw/internal/: fontfaceft.cpp  fontsengine.cpp  fontsengine.h  qfontprovider.cpp
framework/draw/tests/: CMakeLists.txt  fontsprovider_qt_tests.cpp
framework/global/: CMakeLists.txt  iglobalconfiguration.h  iprocess.h  stringutils.cpp  stringutils.h
framework/global/internal/: baseapplication.cpp  globalconfiguration.cpp  globalconfiguration.h  process.cpp  process.h
framework/global/io/: ifilesystem.h
framework/global/tests/: CMakeLists.txt  sharedhashmap_tests.cpp  sharedmap_tests.cpp
framework/global/types/: sharedhashmap.h  sharedmap.h  uri.cpp  uri.h  val.h
framework/interactive/: iinteractiveuriregister.h
framework/midi/: CMakeLists.txt
framework/midiremote/internal/: midiremote.cpp  midiremote.h
framework/mpe/: soundid.h
framework/musesampler/: musesamplertypes.h
framework/musesampler/internal/: apitypes.h  musesamplerresolver.cpp  musesamplersequencer.cpp
framework/rcommand/: commandtypes.h  icommanddispatcher.h  icommandsregister.h
framework/rcommand/internal/: commanddispatcher.cpp  commanddispatcher.h  commandsregister.cpp  commandsregister.h
framework/rcontrol/mcp/: mcpcontroller.cpp
framework/shortcuts/: CMakeLists.txt  icommandshortcutsregister.h  ishortcutsconfiguration.h  shortcutstypes.h
framework/shortcuts/internal/: commandshortcutsregister.cpp  commandshortcutsregister.h  shortcutsconfiguration.cpp  shortcutscontroller.cpp  shortcutscontroller.h
framework/shortcuts_v2/: CMakeLists.txt  ishortcutsresolver.h  shortcutsmodule.cpp  shortcutsmodule.h
framework/shortcuts_v2/internal/: commandshortcutsregister.cpp  shortcutsconfiguration.h  shortcutscontroller.cpp  shortcutsregister.cpp
framework/stubs/audio/: audioconfigurationstub.cpp  audioconfigurationstub.h
framework/stubs/shortcuts/: shortcutsconfigurationstub.cpp  shortcutsconfigurationstub.h
framework/testflow/examples/: PutNote.js
framework/tours/internal/: toursprovider.cpp
framework/ui/: CMakeLists.txt  iuiengine.h  navigationcommands.h  uimodule.cpp  uimodule.h
framework/ui/api/: navigationapi.cpp  navigationapi.h  themeapi.cpp  themeapi.h
framework/ui/internal/: navigationcommandsregister.cpp  navigationcommandsregister.h  navigationcommandsstate.cpp  navigationcommandsstate.h  navigationcontroller.cpp  navigationcontroller.h  uiactionsregister.cpp  uiactionsregister.h  uicontextconfiguration.cpp  uiengine.cpp  uiengine.h
framework/ui/tests/: CMakeLists.txt  environment.cpp  navigationcontroller_tests.cpp
framework/ui/view/: iconcodes.h  widgetstyle.cpp  widgetstyle.h
framework/update/internal/: appupdatescenario.cpp
framework/vst/: CMakeLists.txt  vstpluginattrs.h  vsttypes.h
framework/vst/internal/: vstaudioclient.cpp  vstaudioclient.h  vstmodulesrepository.cpp  vstmodulesrepository.h  vstpluginmetareader.cpp  vstpluginmetareader.h  vstpluginsscanner.cpp  vstpluginsscanner.h
framework/vst/sdk/: CMakeLists.txt
tools/codestyle/: format_dir.cmake  run_scan.sh
(+56 files in other folders)
